# Patent-Relational-Mapper

./: Cargo.toml  README.md
Project assets/: FarmingQueryWords1.txt  FarmingQueryWords2.txt  Patents.csv  highest.txt
src/: main.rs
