[package]
name = "PatentsRM"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.14", features = ["default", "blocking", "cookies", "json", "socks"]}
serde = {version = "1.0", features = ["derive"]}
tokio = {version = "1", features = ["full"]}
serde_json = "1.0.74"
regex = "1.9.5"
csv = "1.2.2"
console = "0.15.7"
crossterm = "0.27.0"
crokey = "0.5.1"
chrono = "0.4.31"
cond_utils = '0.1.0'

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 1
